<resources>
    <string name="app_name">GPS Tracker</string>
    <string name="mapActivityName">Map</string>
    <string name="loginActivityName">Login</string>
    <string name="resetPasswordActivityName">Reset password</string>
    <string name="registrationActivityName">Registration</string>
    <string name="EnterInviteCodeActivityName">Enter Invite Code</string>
    <string name="sendInviteCodeActivity">Send Invite Code</string>
    <string name="Profile">Profile</string>
    <string name="emailNotVerified">Email is not verified, check your email box</string>
    <string name="loginSuccess">Login successful</string>
    <string name="waitInformation">Please wait…</string>
    <string name="waitMessage">Processing…</string>
    <string name="verificationEmailSentInformation">"Verification email sent to "</string>
    <string name="failedVerificationEmailSend">Failed to send verification email</string>
    <string name="changePasswordSent">"Change password link sent to email "</string>
    <string name="validEmail">Write valid email</string>
    <string name="emptyFieldInformation">Field cannot be empty</string>
    <string name="invalidCode">This code is invalid</string>
    <string name="yourselfInviteCode">You cannot add your invite code</string>
    <string name="permissionDenied">Permission denied</string>
    <string name="permissionNotGrantedInformation">Your permission was not granted</string>
    <string name="distance">Distance</string>
    <string name="timeLocationReport">Location report</string>
    <string name="inPolygonInformation">is in area</string>
    <string name="exitPolygonInformation">exit area</string>
    <string name="editName">Edit name</string>
    <string name="writeNewName">Write new name</string>
    <string name="cancel">Cancel</string>
    <string name="reauthenticate">Re-authenticate</string>
    <string name="reauthenticateInformation">You must re-authenticate\nSign in again</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="changePassword">Change password</string>
    <string name="enterNewPassword">Enter your new password</string>
    <string name="passwordChanged">Password changed</string>
    <string name="emailOrPasswordIncorrect">Your email or password is incorrect. Try again.</string>
    <string name="deleteUser">Delete user</string>
    <string name="deleteUserConfirmation">Are you sure you want to delete your account?</string>
    <string name="deletedAccountInformation">Your account has been deleted</string>
    <string name="getLocationInformation">Get location</string>
    <string name="generateCode">generate code</string>
    <string name="drawArea">Draw area</string>
    <string name="editArea">Edit area</string>
    <string name="logout">Logout</string>
    <string name="enterCode">Enter code</string>
    <string name="enterInviteCode">Enter invite code</string>
    <string name="submit">Submit</string>
    <string name="enterCodeHere">Enter code here</string>
    <string name="enterValidEmailInformation">Enter valid email to reset your password</string>
    <string name="emailAddress">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Sign up!</string>
    <string name="resetPassword">Forgot your password?</string>
    <string name="userName">User name</string>
    <string name="userPassword">User password</string>
    <string name="deleteMyAccount">Delete my account</string>
    <string name="deleteAccount">Delete account</string>
    <string name="name">Name</string>
    <string name="shareInviteCodeInformation">Share invite code</string>
    <string name="loading">Loading…</string>
    <string name="yourPassword">Your password</string>
    <string name="yourValidEmail">Your email address</string>
    <string name="yourName">Your name</string>
    <string name="loginInOtherDevice">You are currently logged in other device. Please sign out in other device and then logging in this device.</string>
    <string name="unfollowYourselfInformation">You cannot unfollow yourself</string>
    <string name="unfollowUserTitle">Unfollow user</string>
    <string name="unfollowUser">Are you sure you want to stop following this user?</string>
    <string name="enterEmail">Please enter email</string>
    <string name="enterPassword">Please enter password</string>
    <string name="enterName">Please enter name</string>
    <string name="needLocationPermission">Location permission needed</string>
    <string name="acceptLocationPermission">This app needs the location permission, please accept to use location functionality</string>
    <string name="locationSettings">Location settings</string>
    <string name="deleteAreaPolygon">Delete area</string>
    <string name="deleteAreaPolygonMessage">Do you want to delete the clicked area?</string>
    <string name="no_account_information">Don\'t have an account?</string>
    <string name="logoutMessage">Are you sure you want to log out?</string>
    <string name="notificationAreaDescription">Gps Tracker area notification</string>
    <string name="locationUnavailable">The location is unavailable. You have turned off the GPS or you do not have a GPS signal</string>
    <string name="errorInvalidCustomToken">The custom token format is incorrect. Please check the documentation.</string>
    <string name="errorCustomTokenMismatch">The custom token corresponds to a different audience.</string>
    <string name="errorInvalidCredential">The supplied auth credential is malformed or has expired.</string>
    <string name="errorInvalidEmail">The email address is badly formatted.</string>
    <string name="errorWrongPassword">The password is invalid.</string>
    <string name="errorUserMismatch">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="errorRequestRecentLogin">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="errorAccountExistsWithDifferentCredential">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="errorEmailAlreadyInUse">The email address is already in use by another account.</string>
    <string name="errorCredentialAlreadyInUse">This credential is already associated with a different user account.</string>
    <string name="errorUserDisabled">The user account has been disabled by an administrator.</string>
    <string name="errorUserTokenExpired">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="errorUserNotFound">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="errorInvalidUserToken">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="errorOperationNotAllowed">This operation is not allowed. You must enable this service in the console.</string>
    <string name="errorWeakPassword">The given password is invalid.</string>
    <string name="changeMapLayer">Change map layer</string>
    <string name="dataLoadingInformation">Data loading. Try again!</string>
    <string name="xiaomiBatteryOptimizationInformation">Select from the list %1$s, then select the option \"No restrictions\". This will allow the application to run in the background, which is necessary for the proper operation of the application.</string>
    <string name="applicationPerformance">Application performance</string>
    <string name="applicationGoodPerformanceMessage">The number of users or areas observed now is optimal for the correct application performance.</string>
    <string name="applicationBadPerformanceMessage">Too many users or areas being watched. Remove areas or stop observing users differently to increase the performance of the application, actions checking areas will be performed every three minutes.</string>
    <string name="user">User</string>
    <string name="code">Code</string>
    <string name="inviteUserInformation">The user will appear on the map when he accepts the desire to follow you.</string>
    <string name="followingTitle">Connections</string>
    <string name="followingAttemptMessage">Do you want to follow and be followed by %1$s %2$s?</string>

</resources>
