<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kamilmilik.gps_tracker.invite.EnterInviteActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/enterInviteCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/enterInviteCode"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextEnterInviteCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enterInviteCodeTextView"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:hint="@string/enterCodeHere"
            android:inputType="textCapCharacters" />

        <Button
            android:id="@+id/buttonSubmitInvite"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEnterInviteCode"
            android:layout_centerInParent="true"
            android:text="@string/submit" />
    </RelativeLayout>


    <include layout="@layout/progress_bar" />

    <include layout="@layout/toolbar" />

</RelativeLayout>
