<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kamilmilik.gps_tracker.login.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/toolbarMainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <include layout="@layout/toolbar" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarMainActivity"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <EditText
                    android:id="@+id/emailLoginEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/yourValidEmail"
                    android:inputType="textEmailAddress" />


                <EditText
                    android:id="@+id/passwordLoginEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/emailLoginEditText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/emailLoginEditText"
                    android:layout_below="@+id/emailLoginEditText"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableStart="@drawable/ic_lock"
                    android:ems="10"
                    android:hint="@string/yourPassword"
                    android:inputType="textPassword"
                    android:paddingTop="25dp" />

                <TextView
                    android:id="@+id/resetPasswordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/passwordLoginEditText"
                    android:paddingBottom="10dp"
                    android:text="@string/resetPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/resetPasswordText"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/login" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_account_information" />

                        <TextView
                            android:id="@+id/registrationButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:text="@string/registration"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
