<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kamilmilik.gps_tracker.map.MapActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/toolbarMapActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <include layout="@layout/toolbar" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/inviteCodeLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarMapActivity"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonToActivityGenerateCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generateCode" />

            <Button
                android:id="@+id/buttonToActivityEnterInvite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enterCode" />

            <Button
                android:id="@+id/buttonToChangeProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inviteCodeLinear">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listOnline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <fragment
                android:id="@+id/mapFragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/listOnline" />

            <FrameLayout
                android:id="@+id/draggable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/listOnline" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listOnline">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/drawButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/drawArea"
                        android:textColor="@color/blackColor" />

                    <Button
                        android:id="@+id/editPolygonButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/drawButton"
                        android:layout_toRightOf="@id/drawButton"
                        android:text="@string/editArea"
                        android:textColor="@color/blackColor" />

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_margin="14dp"
                        android:contentDescription="@string/changeMapLayer"
                        android:elevation="4dp"
                        android:foregroundGravity="bottom|right"
                        android:translationY="-30dp"
                        app:cardBackgroundColor="@android:color/transparent"
                        tools:targetApi="lollipop">


                        <ImageButton
                            android:id="@+id/mapSatelliteButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#A6FFFFFF"
                            android:src="@drawable/ic_map_satellite" />

                    </android.support.v7.widget.CardView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <include layout="@layout/progress_bar_clickable" />

                </RelativeLayout>

            </RelativeLayout>

            <include layout="@layout/progress_bar" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
